--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
   <body>
 
       <header>
-        <h1>{{ site.title | default: site.github.repository_name }}</h1>
+        <h1><a href="{{ site.url }}{{ site.baseurl }}/" title="Home" style="color: #f3f3f3;">{{ site.title }}</a></h1>
         <p>{{ site.description | default: site.github.project_tagline }}</p>
       </header>
 
