--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -10,14 +10,19 @@ layout: default
 
   <div class="post-date">
     <time datetime="{% if post.last_modified %}{{ post.last_modified | date_to_xmlschema }}{% endif %}">
-      {{ page.date | date: "%-m/%-d/%Y" }}
+      {{ post.date | date: "%-m/%-d/%Y" }}
     </time>
+    <div>
+      <small>
+        <em>Updated {{ post.last_modified | date: "%-m/%-d/%Y %l:%M %p %Z" }}</em>
+      </small>
+    </div>
   </div>
 
   <div>
     <small>
-      <i class="fa fa-pencil" aria-hidden="true"></i> <a href="https://github.com/ceshine/dstotd/edit/master/{{ page.path }}" target="_blank">Improve this article</a> &nbsp;
-      <i class="fa fa-history" aria-hidden="true"></i> <a href="https://github.com/ceshine/dstotd/commits/master/{{ page.path }}" target="_blank">Revision history</a>
+      <i class="fa fa-pencil" aria-hidden="true"></i> <a href="https://github.com/mkiser/WTFJHT/edit/master/{{ post.path }}" target="_blank">Improve this article</a> &nbsp; <i class="fa fa-history" aria-hidden="true"></i> <a href="https://github.com/mkiser/WTFJHT/commits/master/{{ post.path }}" target="_blank">Revision history</a> &nbsp; <i class="fa fa-user" aria-hidden="true"></i>
+      {% if post.contributors == "1" %}{{ post.contributors }} Contributor{% else %}{{ post.contributors }} Contributors{% endif %}
     </small>
   </div>
 
