Barebone search page

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -61,3 +61,11 @@ footer small{
 #banner .archive-button{
   margin-left: -190px;
 }
+
+div.ais-hits--item{
+  padding-bottom: 20px;
+}
+
+em.ais-Highlight{
+  background-color: yellow; 
+}
