Fix some AMP issues

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -67,5 +67,17 @@ div.ais-hits--item{
 }
 
 em.ais-Highlight{
-  background-color: yellow; 
+  background-color: yellow;
+}
+
+header a.title{
+  color: #f3f3f3;
+}
+
+header a.desc{
+  color: LightGray;
+}
+
+#search-hits{
+  height:2000px;
 }
