--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,15 +30,7 @@
         <span id="logo"></span>
         <a href="{{ site.github.repository_url }}" class="button fork"><strong>View On GitHub</strong></a>
         <a href="/archive.html" class="button fork archive-button"><strong>View Archives</strong></a>
-        {% if site.show_downloads %}
-          <div class="downloads">
-            <span>Downloads:</span>
-            <ul>
-              <li><a href="{{ site.github.zip_url }}" class="button">ZIP</a></li>
-              <li><a href="{{ site.github.tar_url }}" class="button">TAR</a></li>
-            </ul>
-          </div>
-        {% endif %}
+        <a href="/search.html" class="button fork search-button"><strong>Search</strong></a>
       </div><!-- end banner -->
 
     <div class="wrapper">
