--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -62,6 +62,10 @@ footer small{
   margin-left: -190px;
 }
 
+#banner .search-button{
+  margin-left: -68px;
+}
+
 div.ais-hits--item{
   padding-bottom: 20px;
 }
