--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,6 +21,9 @@
     {% if page.path contains '_posts' %}
     <link rel="amphtml" href="{{ page.id | prepend: '/amp' | prepend: site.baseurl | prepend: site.url | append: '.html' }}">
     {% endif %}
+    {% if page.path contains 'page/' or page.path == 'index.html' %}
+    <meta name="ROBOTS" content="NOINDEX, FOLLOW">
+    {% endif %}
   </head>
   <body>
 
