--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -92,6 +92,10 @@ header a.desc{
   margin-bottom: 0px;
 }
 
+.post-contributor{
+  padding-bottom: 20px;
+}
+
 @media print, screen and (max-width: 720px) {
   #banner .archive-button{
     left: 340px;
