--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -35,6 +35,7 @@ layout: default
       {% endif %}
   </div>
 
+  {% include toc.html html=page.content %}
   <div class="post-content">
     {{ page.content }}
   </div>
