--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,31 +1,7 @@
 ---
 layout: default
 ---
-<article class="post">
-  <h1 class="post-title">
-    <a href="{{ site.baseurl }}{{ page.url }}">
-      {{ page.title }}:
-    <span class="post-small">{{ page.description }}</span></a>
-  </h1>
-
-  <div class="post-date">
-    <time datetime="{% if post.last_modified %}{{ post.last_modified | date_to_xmlschema }}{% endif %}">
-      {{ page.date | date: "%-m/%-d/%Y" }}
-    </time>
-    <div>
-      <small>
-        <em>Updated {{ page.last_modified | date: "%-m/%-d/%Y %l:%M %p %Z" }}</em>
-      </small>
-    </div>
-  </div>
-
-  <div class="post-contributor">
-    <small>
-      <i class="fa fa-pencil" aria-hidden="true"></i> <a href="https://github.com/ceshine/dstotd/edit/master/{{ post.path }}" target="_blank">Improve this article</a> &nbsp; <i class="fa fa-history" aria-hidden="true"></i> <a href="https://github.com/ceshine/dstotd/commits/master/{{ post.path }}" target="_blank">Revision history</a> &nbsp; <i class="fa fa-user" aria-hidden="true"></i>
-      {% if post.contributors == "1" %}{{ page.contributors }} Contributor{% else %}{{ page.contributors }} Contributors{% endif %}
-    </small>
-  </div>
-
+<main class="content" role="main">
   <div class="pagination">
       {% if page.next.url %}
         <a href="{{page.next.url}}">&laquo;  {{page.next.title}}</a>
@@ -34,20 +10,44 @@ layout: default
         <a href="{{page.previous.url}}">{{page.previous.title}} &raquo;</a>
       {% endif %}
   </div>
-  {% include scroll-to-top.html %}
-  <div id="toc">
-    {% include toc.html html=page.content %}
-  </div>
-  <div class="post-content">
-    {{ page.content }}
-  </div>
-</article>
-
-<div class="pagination">
-    {% if page.next.url %}
-      <a href="{{page.next.url}}">&laquo;  {{page.next.title}}</a>
-    {% endif %}
-    {% if page.previous.url %}
-      <a href="{{page.previous.url}}">{{page.previous.title}} &raquo;</a>
-    {% endif %}
-</div>
+  <article class="post">
+    <div class="post-meta">
+      <h1 class="post-title">{{ page.title }}: <span class="post-small">{{ page.description }}</h1>
+      <div class="post-date">
+        <time datetime="{% if page.last_modified %}{{ page.last_modified | date_to_xmlschema }}{% endif %}">
+          {{ page.date | date: "%-m/%-d/%Y" }} <em>Updated {{ page.last_modified | date: "%-m/%-d/%Y %l:%M %p %Z" }}</em>
+        </time>
+      </div>
+      <div class="post-contributor">
+        <i class="fa fa-pencil" aria-hidden="true"></i> <a href="https://github.com/ceshine/dstotd/edit/master/{{ page.path }}" target="_blank">Improve this article</a> &nbsp; <i class="fa fa-history" aria-hidden="true"></i> <a href="https://github.com/ceshine/dstotd/commits/master/{{ page.path }}" target="_blank">Revision history</a> &nbsp; <i class="fa fa-user" aria-hidden="true"></i>
+        {% if page.contributors == "1" %}{{ page.contributors }} Contributor{% else %}{{ page.contributors }} Contributors{% endif %}
+      </div>
+    </div>
+    {% include scroll-to-top.html %}
+    <div id="toc">
+      <center>Table of Contents</center>
+      {% include toc.html html=page.content %}
+    </div>
+    <section class="post-content">
+      {{content}}
+    </section>
+    <div class="pagination">
+        {% if page.next.url %}
+          <a href="{{page.next.url}}">&laquo;  {{page.next.title}}</a>
+        {% endif %}
+        {% if page.previous.url %}
+          <a href="{{page.previous.url}}">{{page.previous.title}} &raquo;</a>
+        {% endif %}
+    </div>  
+    <footer class="post-footer">
+      <section class="share">
+        <a class="icon" href="https://twitter.com/intent/tweet?url={{ site.url }}{{ page.id }}&text={{page.title | cgi_escape}}&via={{ site.twitter_username }}" target="_blank">
+          Share on
+          <span class="icon icon--twitter">{% include icon-twitter.svg %}</span>
+          <!-- {% include icon-twitter.html %} -->
+        </a>
+      </section>
+    </footer>
+    {% include footer.html %}
+  </article>
+</main>
