--- a/_layouts/year-archive.html
+++ b/_layouts/year-archive.html
@@ -5,23 +5,27 @@ image: "/public/dstotd-twitter.png"
 metatags: noindex, follow
 ---
 
-<h1 style="text-align: center;">Archive of Posts from {{ page.date | date: "%Y" }}</h1>
+<main class="content" role="main">
+  <h1 class="post-title">Archive of Posts from {{ page.date | date: "%Y" }}</h1>
+  {% include scroll-to-top.html %}
+  <div id="toc">
+  {% include archive-nav.html %}
+  </div>
 
-{% include archive-nav.html %}
-
-<div class="posts">
-  <article class="post">
-  {% for post in page.posts reversed %}
-    <h2 class="post-title archive">
-      <a href="{{ site.baseurl }}{{ post.url }}">
-        {{ post.title }}:
-      <span class="post-small">{{ post.description }}</span></a>
-    </h2>
-    <time datetime="{{ post.last_modified | date_to_xmlschema }}" class="post-date">
-       {{ post.date | date: "%m/%d/%Y" }}
-    <small><em>Updated: {{ post.last_modified | date: "%m/%d/%Y %r %Z"}}
-    </em></small>
-  </time>
-  {% endfor %}
-  </article>
-</div>
+  <div class="cf frame">
+    {% for post in page.posts reversed %}
+    <article class="post">
+      <h2 class="archive-post-title">
+        <a href="{{ site.baseurl }}{{ post.url }}">
+          {{ post.title }}:
+        <span class="post-small">{{ post.description }}</span></a>
+      </h2>
+      <time datetime="{{ post.last_modified | date_to_xmlschema }}" class="post-date">
+         {{ post.date | date: "%m/%d/%Y" }}
+      <em>Updated: {{ post.last_modified | date: "%m/%d/%Y %r %Z"}}
+      </em>
+      </time>
+    </article>
+    {% endfor %}
+  </div>
+</main>
