--- a/_includes/scroll-to-top.html
+++ b/_includes/scroll-to-top.html
@@ -40,5 +40,5 @@
   </amp-position-observer>
 </div>
 <button id="scrollToTopButton"
-  on="tap:header.scrollTo(duration=200)"
+  on="tap:page-top.scrollTo(duration=200)"
   class="scrollToTop">⌃</button>
