--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -270,9 +270,6 @@ body {
       margin-bottom: 0px;
       font-family: $font-sans;
     }
-    h3 {
-      font-size: 36px;
-    }
     h2, h1 {
       letter-spacing: -0.02em;
       font-weight: 700;
@@ -296,7 +293,7 @@ body {
     p {
       font-weight: 400;
       font-style: normal;
-      font-size: 22px;
+      font-size: 16px;
       line-height: 1.59;
       letter-spacing: -.002em;
       margin-top: 10px;
@@ -546,6 +543,7 @@ pre {
 }
 
 div.post-date {
+  margin-top: 5px;
   line-height: 20px;
 }
 
