--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,15 @@
 <header class="site-header" id="page-top">
-  <amp-img src="{{ site.baseurl }}{{ site.pagelogo }}" width="500" height="48" alt="Data Science Tweets of the Day">
-  </amp-img>
+  <a href="{{ site.baseurl }}/">
+    <amp-img src="/public/logo.png"
+        width="640" height="48"
+        layout="responsive"
+        srcset="/public/logo.png 640w,
+                /public/logo-narrow.png 320w"
+        sizes="(min-width: 640px) 640px, 320px"
+        heights="(min-width:640px) 48px, 96px"
+        alt="Data Science Tweets of the Day">
+  </amp-img></a>
   <!-- <div class="logo"><a href="{{ site.baseurl }}/" class="logo">{{ site.title }}</a></div> -->
-
   <div class="page-links">
     <a class="page-link" href="{{ site.baseurl }}/">Home</a>
     <a class="page-link" href="{{ site.baseurl }}/archive">Archive</a>
