Fix TOC position in mobile (was leaning to the right)

--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -552,12 +552,9 @@ div.post-contributor {
 }
 
 #toc {
-  position: relative;
   background-color: #EEE;
   width: 60%;
-  max-width: 400px;
-  left: 15%;
-  margin-top: 10px;
+  margin: 10px auto 0px auto;
   padding: 10px 30px 10px 20px;
   border: 1px solid #E8E8E8;
   border-radius: 3px;
