--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,5 +11,6 @@
     <a class="page-link" href="{{ site.baseurl }}/">Home</a>
     <a class="page-link" href="{{ site.baseurl }}/archive">Archive</a>
     <a class="page-link" href="{{ site.baseurl }}/search">Search</a>
+    <a class="page-link" href="{{ site.baseurl }}/about">About</a>
   </div>
 </header>
