--- a/_includes/styles.scss
+++ b/_includes/styles.scss
@@ -293,7 +293,7 @@ body {
     p {
       font-weight: 400;
       font-style: normal;
-      font-size: 16px;
+      font-size: 18px;
       line-height: 1.59;
       letter-spacing: -.002em;
       margin-top: 10px;
@@ -348,18 +348,16 @@ body {
       }
     }
     ul, ol {
-      padding: 0 0 30px;
-      margin: 0;
+      // padding: 0 0 30px;
+      margin-top: 10px;
     }
     li {
       padding: 0;
       font-weight: 400;
       font-style: normal;
-      font-size: 23px;
-      line-height: 30px;
+      font-size: 18px;
+      line-height: 20px;
       margin-left: 30px;
-      margin-bottom: 12px;
-      padding-top: 2px;
       p {
         padding: 0 0 golden-ratio(1rem, 1);
       }
